--- a/SkAdapterDemo/sk_rvadapter/build.gradle
+++ b/SkAdapterDemo/sk_rvadapter/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 29
@@ -21,6 +22,10 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -32,3 +37,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
 }
+
+publish {
+    userOrg = 'smarkorg' //bintray账户下某个组织id
+    groupId = 'com.sk.rvadapter' //maven仓库下库的包名，一般为模块包名
+    artifactId = 'sk_rvadapter' //项目名称
+    publishVersion = '1.0.1' //版本号
+    desc = 'A convenient and practical RecycleView encapsulates the adapter' //项目介绍
+    website = '' //项目主页
+    licences = ['Apache-2.0']
+
+}
+
